fix: fixed bulletin board text overflowing the parent div change: added counter of remaining characters for bulletin board (inside modal)

--- a/a2note/static/a2note/main.css
+++ b/a2note/static/a2note/main.css
@@ -1141,6 +1141,7 @@ option {
 
 #bulletinContentDiv {
   position: absolute;
+  top: 0;
   height: 100%;
   overflow-y: auto;
 }
